# cpp-primer5e

./: .gitignore  README.md  SUMMARY.md  chapter-1-getting-started.md  chapter-10-generic-algorithms.md  chapter-11-associative-containers.md  chapter-12-dynamic-memory.md  chapter-13-copy-control.md  chapter-14-overloaded-operations-and-conversions.md  chapter-15-object-oriented-programming.md  chapter-16-templates-and-generic-programming.md  chapter-17-specialized-library-facilities.md  chapter-18-tools-for-large-programs.md  chapter-19-specialized-tools-and-techniques.md  chapter-2-variables-and-basic-types.md  chapter-3-strings-vectors-and-arrays.md  chapter-4-expressions.md  chapter-5-statements.md  chapter-6-functions.md  chapter-7-classes.md  chapter-8-the-io-library.md  chapter-9-sequential-containers.md
snippets/c++/thread/: CMakeLists.txt  main.cc
snippets/sanitizer/demo/: CMakeLists.txt  main.cc
snippets/sanitizer/thread/: CMakeLists.txt  simple_race.cc
src/: CMakeLists.txt
src/chapter1/: CMakeLists.txt
src/chapter1/add/: CMakeLists.txt  add.cc
src/chapter1/add_item/: CMakeLists.txt  add_item.cc
src/chapter1/hello/: CMakeLists.txt  hello.cc
src/chapter1/include/: Sales_item.h
src/chapter1/main/: CMakeLists.txt  main_only.cc
src/chapter1/mul/: CMakeLists.txt  multi.cc
src/chapter1/occurs/: CMakeLists.txt  occurs.cc
src/chapter1/sum/: CMakeLists.txt  sum.cc
src/chapter10/: CMakeLists.txt
src/chapter10/accum/: CMakeLists.txt  accum.cc
src/chapter10/accum2/: CMakeLists.txt  accum.cc
src/chapter10/biggies/: CMakeLists.txt  biggies.cc
src/chapter10/bind/: CMakeLists.txt  bind.cc
src/chapter10/elim/: CMakeLists.txt  elim.cc
src/chapter10/equal/: CMakeLists.txt  equal.cc
src/chapter10/find/: CMakeLists.txt  find.cc
src/chapter10/lambda/: CMakeLists.txt  lambda.cc
src/chapter10/misc/: CMakeLists.txt  misc10.cc
src/chapter10/reverse/: CMakeLists.txt  reverse.cc
src/chapter10/reverse2/: CMakeLists.txt  reverse.cc
src/chapter10/stream/: CMakeLists.txt  stream.cc
src/chapter11/: CMakeLists.txt
src/chapter11/erase/: CMakeLists.txt  erase.cc
src/chapter11/filter/: CMakeLists.txt  filter.cc
src/chapter11/hash/: CMakeLists.txt  hash.cc
src/chapter11/map/: CMakeLists.txt  Sales_data.h  map.cc
src/chapter11/misc/: CMakeLists.txt  misc.cc
src/chapter11/multimap/: CMakeLists.txt  multimap.cc
src/chapter11/pair/: CMakeLists.txt  pair.cc
src/chapter11/set/: CMakeLists.txt  set.cc
src/chapter11/transform/: CMakeLists.txt  transform.cc
src/chapter11/unorder/: CMakeLists.txt  unorder.cc
src/chapter11/word/: CMakeLists.txt  word.cc
src/chapter12/: CMakeLists.txt
src/chapter12/alloc/: CMakeLists.txt  alloc.cc
src/chapter12/alloc2/: CMakeLists.txt  alloc2.cc
src/chapter12/conn/: CMakeLists.txt  conn.cc
src/chapter12/exer/: CMakeLists.txt  exer.cc
src/chapter12/foo/: CMakeLists.txt  foo.cc  foo.h
src/chapter12/strblob/: CMakeLists.txt  main.cc
src/chapter12/text/: CMakeLists.txt  text.cc  text.h
src/chapter12/text2/: CMakeLists.txt  main.cc  query.h  text.cc  text.h
src/chapter12/text3/: CMakeLists.txt  query.h  strblob.h  text.cc  text.h
src/chapter12/unique/: CMakeLists.txt  unique.cc
src/chapter12/unique2/: CMakeLists.txt  unique2.cc
src/chapter12/unique3/: CMakeLists.txt  unique3.cc
src/chapter12/weak/: CMakeLists.txt  weak.cc
src/chapter13/: CMakeLists.txt
src/chapter13/copyctor/: CMakeLists.txt  copyctor.h  main.cc
src/chapter13/hasptr/: CMakeLists.txt  copyctrl.h  main.cc
src/chapter13/hasptr2/: CMakeLists.txt  copyctrl.h  main.cc
src/chapter13/mail/: CMakeLists.txt  folder.cc  folder.h  main.cc  message.cc  message.h
src/chapter13/sort/: CMakeLists.txt  main.cc  sort.cc  sort.h
src/chapter13/strVec/: CMakeLists.txt  main.cc  strVec.cc  strVec.h
src/chapter13/strblob/: CMakeLists.txt  main.cc  strblob.h
src/chapter13/string/: CMakeLists.txt  main.cc  string.cc  string.h
src/chapter13/text/: CMakeLists.txt  make_plural.h  query.h  strVec.cc  text.cc  text.h
src/chapter14/: CMakeLists.txt
src/chapter14/misc/: CMakeLists.txt  misc.cc
src/chapter14/print/: CMakeLists.txt  main.cc  print.h
src/chapter14/sales/: CMakeLists.txt  Sales_data.cc  Sales_data.h  main.cc
src/chapter14/strVec/: CMakeLists.txt  main.cc  strVec.cc  strVec.h
src/chapter14/strblob/: CMakeLists.txt  main.cc  strblob.h
src/chapter14/string/: CMakeLists.txt  main.cc  string.cc  string.h
src/chapter15/: CMakeLists.txt
src/chapter15/basket/: CMakeLists.txt  basket.cc  basket.h  book.h
src/chapter15/book/: CMakeLists.txt  book.cc  book.h
src/chapter15/misc/: CMakeLists.txt  misc.cc
src/chapter15/text/: CMakeLists.txt  main.cc  make_plural.h  query.cc  query.h  result.h  text.cc  text.h
src/chapter16/: CMakeLists.txt
src/chapter16/blob/: CMakeLists.txt  blob.h  main.cc
src/chapter16/blob2/: CMakeLists.txt  blob.h  main.cc  smart_pointer.h
src/chapter16/misc/: CMakeLists.txt  misc.cc
src/chapter16/misc2/: CMakeLists.txt  misc.cc
src/chapter16/vec/: CMakeLists.txt  main.cc  vec.h
src/chapter2/: CMakeLists.txt
src/chapter2/auto/: CMakeLists.txt  auto.cc
src/chapter2/decltype/: CMakeLists.txt  decltype.cc
src/chapter2/literals/: CMakeLists.txt  literals.cc
src/chapter2/sales/: CMakeLists.txt  (+1 more)
src/chapter3/: CMakeLists.txt
src/chapter6/: CMakeLists.txt
src/chapter7/: CMakeLists.txt
src/chapter8/: CMakeLists.txt
src/chapter9/: CMakeLists.txt
src/concurrency/: CMakeLists.txt
src/experiment/: CMakeLists.txt  appleveldb.cc  asm.cc  assert.cc  atomictest.cc  cfile.c  clock.cc  conditional.cc  consistent_hash.cc  consume.cc  cpp11.cc  crtp.cc  data.txt  fences.cc  file.cc  hashtest.cc  locale.cc  mcastclient.c  mcastserver.c  new.cc  nmcc.cc  plugin.cc  plugin_hello.cc  pod.cc  relaxed.cc  release_sequence.cc  reordering.cc  sbind.cc  singleton.cc  smart_ptr.cc  static.cc  template.cc  thread_local.cc  timetest.cc  timing_clock.cc  transitive.cc  transitive2.cc  typetraits.cc  unordered.cc  valuecatogery.cc
src/network/: CMakeLists.txt
src/verify/: CMakeLists.txt
(+466 files in other folders)
