project(CHAPTER10 CXX)

add_subdirectory(misc)
add_subdirectory(find)
add_subdirectory(accum)
add_subdirectory(accum2)
add_subdirectory(equal)
add_subdirectory(elim)
add_subdirectory(lambda)
add_subdirectory(biggies)
add_subdirectory(bind)
add_subdirectory(stream)
add_subdirectory(reverse)
add_subdirectory(reverse2)