project(CHAPTER6 CXX)

add_subdirectory(array)
add_subdirectory(count-calls)
add_subdirectory(err-msg)
add_subdirectory(fact)
add_subdirectory(fcnptr)
add_subdirectory(good)
add_subdirectory(inline)
add_subdirectory(ret)
add_subdirectory(plural)
add_subdirectory(ref)
add_subdirectory(ref-params)
add_subdirectory(print)
add_subdirectory(funptr2)
add_subdirectory(debug)
add_subdirectory(overloaded)
add_subdirectory(funptr3)